# dfencoder

./: .gitignore  ice-cat-demo.ipynb  pyproject.toml  train_icecat.py
dfencoder/: autoencoder.py
